# cmake-proj-template

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: module.cmake
source/: CMakeLists.txt
src/: main.cpp
